# libretto

./: .gitattributes  .gitignore  Makefile  R8_IMPORT_PLAN.md  README.md  mise.toml  shell.nix
api/: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  diesel.sh  load_image.py
api/cache/media/: 0111048d-1754-41ed-8f08-b3476bfad4e1  013510c1-3b70-497d-b312-2068c8c7f19e  0229099c-d305-46b8-986b-dfd4dcf10445  02d42ae2-4799-48a6-af23-ad17f607e989  02e09ac1-922b-45c9-92d2-f576af1ba5f6  03490c1f-b510-4b0a-9c02-9c56128ab0bb  03814a5d-4ecf-4d90-834c-508cf1bd3d51  047f2afb-4beb-4a8c-85fe-f42f2ee50f1f  05874579-6f79-4031-b563-ce5ded1f07cb  05970bf5-5996-44bc-a611-5eda2188020b  05c40bb3-10b8-43d9-b8d8-7aaf69639467  05ded40e-22c8-4ea9-b69e-79f6c8f52f38  0745cf21-d831-465e-a546-b01168b25607  0774f137-ee83-46e3-95e5-05156236d908  086e4a57-de36-436b-af53-f0f8248271af  0887eaac-4920-4550-bc7f-627416844f11  08bd37ce-d132-443d-a188-0b406bdf4480  093ed267-63b6-4b61-8faf-b7e5f9726909  0987046d-abe6-46e5-8d10-7f7508b36955  09910903-54c8-438d-a269-93054534fd08  0a5ae9dd-a78d-4ca4-9cd4-f761f3108725  0ad1d344-4bbe-4f2e-9987-ba939bfcd89e  0b3ce1f8-3b58-42f1-84c5-20354c6739d1  0c0cd796-0e3a-45de-a37d-b61afdb3dcd4  0cee0fb2-0318-47c2-8727-1e4c42c65050  0d036d0e-bb62-4685-9fd3-aae19133a603  0e26f84a-5ac9-4125-84f3-0c99f6c68311  0e50c70a-15b1-4dfa-97bb-9fb89ff9c7ae  0e750446-090f-4573-a16f-48203e6e7767  0fee5ddc-b917-42d2-b5ff-fc98d4dfe032  112fd743-c84f-4476-8444-d24c78452122  118e082f-f07a-4a0a-822f-9347d21f8ad1  11b92009-56a9-429d-82f3-fa31d3653026  11e0b0c7-ae87-41ad-b2d2-5b1fb35afd02  1229de8f-802f-412c-94cb-f7fecb51288e  12615fe7-983a-4620-963d-b1394adf58bb  12bfd8b7-dcee-44c7-a7ee-d4c2316c0867  13537af1-0c25-4f5e-852c-534cc1732607  13adce85-3c36-4b65-80b8-168f6b23b0df  13f1b3c0-6e3a-4c53-ac24-d9cbb5a121c7  (+556 more)
api/crates/pcss/: Cargo.toml
api/crates/pcss/src/: api_types.rs  lib.rs  workshop_literature.rs
api/docs/: local-load-and-restore.md
api/migrations/postgres/: 20240720184844_initial.sql  20240720184845_drop_fk_constraints.sql
api/migrations/sqlite/: 20240720184844_initial.sql
api/src/: api.rs  audi_loader.rs  content_store.rs  ferrari_loader.rs  lib.rs  models.rs  pdf_text.rs  settings.rs  vehicle_importer.rs
api/tools/: migrate_web_cache.py  r8_split.py
web/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  eslint.config.mjs  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web/public/marques/: README.md
web/src/: middleware.ts  proxy.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/css/: accordion.css  core.css  document-container.css  image.css  link.css  list.css  nested.css  static.css  table.css  tailwind.css  warning.css
web/src/app/ui/: LibrettoMark.tsx
web/src/lib/: index.ts
(+57 files in other folders)
