[package]
name = "pcss"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.120"
thiserror = "1.0.63"
reqwest = { version = "0.12.5", features = ["blocking", "gzip"] }
serde_path_to_error = "0.1.16"
sha2 = "0.10"
hex = "0.4"
